--- a/themes/aircloud/layout/_partial/nav.ejs
+++ b/themes/aircloud/layout/_partial/nav.ejs
@@ -2,7 +2,7 @@
 <div class="nav" id="nav">
     <div class="avatar-name">
         <div class="name">
-            <i><%= config.author %></i>
+            <span><%= config.author %></span>
         </div>
     </div>
     <div class="contents" id="nav-content">
