--- a/themes/aircloud/layout/_partial/nav.ejs
+++ b/themes/aircloud/layout/_partial/nav.ejs
@@ -13,22 +13,28 @@
                     <span><%= __('nav.home') %></span>
                 </a>
             </li>
-            <li <% if(is_current('tags')){ %> <%- "class=active" %> <% } %>>
-                <a href="<%= url_for(config.tag_dir) %>">
-                    <i class="iconfont icon-biaoqian1"></i>
-                    <span><%= __('nav.tags') %></span>
-                </a>
-            </li>
             <li <% if(is_current('archive')){ %> <%- "class=active" %> <% } %>>
                 <a href="<%= url_for(config.archive_dir) %>">
                     <i class="iconfont icon-guidang2"></i>
-                    <span><%= __('nav.archives') %></span>
+                    <span>技术钻研</span>
+                </a>
+            </li>
+            <li <% if(is_current('life')){ %> <%- "class=active" %> <% } %>>
+                <a href="<%= url_for(config.life_dir) %>">
+                    <i class="iconfont icon-guidang2"></i>
+                    <span>生活感悟</span>
+                </a>
+            </li>
+            <li <% if(is_current('tags')){ %> <%- "class=active" %> <% } %>>
+                <a href="<%= url_for(config.tag_dir) %>">
+                    <i class="iconfont icon-biaoqian1"></i>
+                    <span>标签</span>
                 </a>
             </li>
             <li <% if(is_current('about')){ %> <%- "class=active" %> <% } %>>
                 <a href="<%= config.root %><%- 'about/' %>">
                     <i class="iconfont icon-guanyu2"></i>
-                    <span><%= __('nav.about') %></span>
+                    <span>我的生活</span>
                 </a>
             </li>
             <%if(config.search && config.search.path){%>
