--- a/themes/aircloud/layout/_partial/nav.ejs
+++ b/themes/aircloud/layout/_partial/nav.ejs
@@ -2,7 +2,8 @@
 <div class="nav" id="nav">
     <div class="avatar-name">
         <div class="name">
-            <span><%= config.author %></span>
+            <div class="myname"><%= config.author %></div>
+            <div class="detail">程序猿</div>
         </div>
     </div>
     <div class="contents" id="nav-content">
