--- a/themes/aircloud/layout/about.ejs
+++ b/themes/aircloud/layout/about.ejs
@@ -5,6 +5,8 @@
         <%- partial('_partial/donate', null, {cache: false}) %>
     <% } %>
     <div id="comment-container">
-    	<p>哈哈哈，我叫邱雯腾</p>
+    	<blockquote>
+			<p>大家好，我叫邱雯腾</p>
+		</blockquote>
     </div>
 </div>
