--- a/themes/aircloud/source/css/aircloud.css
+++ b/themes/aircloud/source/css/aircloud.css
@@ -90,7 +90,6 @@ body {
 }
 .nav {
   position: relative;
-  padding-top: 50px;
   color: #333333;
   width: 100%;
   display: flex;
@@ -114,14 +113,15 @@ body {
   height: 100px;
 }
 .nav .avatar-name .name {
-  margin-top: 10px;
   margin-bottom: 20px;
+  text-align: center;
 }
-.nav .avatar-name .name i {
-  font-size: 16px;
-  font-family: "italic" !important;
-  font-weight: 300;
-  color: #666666;
+.nav .avatar-name .name .myname{
+  font-size: 20px;
+}
+.nav .avatar-name .name .detail{
+  margin-top: 10px;
+  font-size: 14px;
 }
 .nav .contents ul {
   width: 100%;
@@ -332,7 +332,7 @@ body {
   flex-direction: row;
 }
 .post-preview .post-time {
-  font-size: 17px;
+  font-size: 14px;
   color: #999999;
   width: 125px;
   font-weight: 300;
@@ -351,7 +351,7 @@ body {
   margin-top: 0;
   margin-bottom: 5px;
   color: #101010;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 300;
   transition: color 0.4s;
 }
@@ -848,17 +848,19 @@ body {
   display: flex;
   align-items: center;
   flex-direction: row;
-  margin-bottom: 10px;
+  margin-bottom: 25px;
 }
 .archives-container .one-tag-list ul li span {
   color: #999999;
   margin-right: 15px;
   min-width: 45px;
+  font-size: 14px;
 }
 .archives-container .one-tag-list ul li a {
   text-decoration: none;
   line-height: 20px;
   color: #4a4a4a;
+  font-size: 20px;
 }
 .archives-container .one-tag-list ul li a span {
   color: #4a4a4a;
