--- a/themes/aircloud/layout/_partial/nav.ejs
+++ b/themes/aircloud/layout/_partial/nav.ejs
@@ -3,7 +3,7 @@
     <div class="avatar-name">
         <div class="name">
             <div class="myname"><%= config.author %></div>
-            <div class="detail">程序猿</div>
+            <div class="detail">会拍照的程序媛</div>
         </div>
     </div>
     <div class="contents" id="nav-content">
