--- a/themes/aircloud/layout/about.ejs
+++ b/themes/aircloud/layout/about.ejs
@@ -4,9 +4,16 @@
     <% if(config.donate){%>
         <%- partial('_partial/donate', null, {cache: false}) %>
     <% } %>
-    <div id="comment-container">
+    <div id="about-me">
     	<blockquote>
 			<p>大家好，我叫邱雯腾</p>
 		</blockquote>
+		<p>
+            <span>联系我：</span>      
+        </p>
+        <p>
+            <span class="title">邮箱：</span>
+            <span>740466085@qq.com</span>
+        </p>
     </div>
 </div>
