--- a/themes/aircloud/layout/archive.ejs
+++ b/themes/aircloud/layout/archive.ejs
@@ -27,14 +27,16 @@ site.posts.sort('date').reverse().forEach(function(post){
         <time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ post.date | date:"%Y-%m-%d" }}</time>
         <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
         </li> -->
-        <li >
-            <span><%= post.date.format('MM-DD') %></span>
-            <i class="fa fa-angle-double-right" aria-hidden="true"></i>
-            <a href="<%- config.root %><%- post.path %>">
-                <%- post.title || "Untitled" %>
-            </a>
-            <!-- <p class="post-meta">{{ post.date | date:"%Y-%m-%d" }}</p> -->
-        </li>
+        <% if (post.series == 'skill'){%>
+            <li>
+                <span><%= post.date.format('MM-DD') %></span>
+                <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+                <a href="<%- config.root %><%- post.path %>">
+                    <%- post.title || "Untitled" %>
+                </a>
+                <!-- <p class="post-meta">{{ post.date | date:"%Y-%m-%d" }}</p> -->
+            </li>
+        <% } %>
         <% }) %>
 
     </ul>
