--- a/themes/aircloud/source/css/aircloud.css
+++ b/themes/aircloud/source/css/aircloud.css
@@ -720,7 +720,7 @@ body {
   justify-content: center;
   height: max-content;
   position: relative;
-  width: 1200px;
+  width: 1000px;
   margin: auto;
   display: flex;
   flex-direction: row;
@@ -729,7 +729,7 @@ body {
   width: 240px;
 }
 .index-container .index-middle {
-  max-width: 980px;
+  max-width: 780px;
   flex: 1;
 }
 @media screen and (max-width: 1180px) {
@@ -1154,6 +1154,7 @@ pre .javascript .function {
   border-left: 2px solid #cccccc;
   list-style: none;
   padding-left: 10px;
+  text-align: center
 }
 .toc-article li a {
   display: block;
