--- a/themes/aircloud/layout/post.ejs
+++ b/themes/aircloud/layout/post.ejs
@@ -16,7 +16,7 @@
         <% }) %>
         <% } %>
         </span>
-        <span class="attr"><%= __('post.visit') %>：<span id="busuanzi_value_page_pv"></span>
+        <span class="attr">阅读：<span id="busuanzi_value_page_pv"></span>
 </span>
 </span>
     </div>
